<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#16000000"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_textview_padding"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/xlarge_text_size" />

        <TextView
            android:id="@+id/small_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="7"
            android:padding="@dimen/small_textview_padding"
            android:text="@string/desc"
            android:textSize="@dimen/small_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/learn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/custom_button"
                android:text="@string/learn_more"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small_text_size" />

            <Button
                android:id="@+id/join_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/custom_button2"
                android:text="@string/join_us"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="16dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/emailET"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:padding="8dp"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawableLeft="@drawable/ic_email_black_24dp" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="PASSWORD"
            android:padding="8dp"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_paasword"
            android:drawableLeft="@drawable/ic_paasword" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/custom_button"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_text_size"
            android:drawableEnd="@drawable/ic_login"
            android:drawableRight="@drawable/ic_login" />

        <Button
            android:id="@+id/login_using_gmail_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/custom_button3"
            android:text="@string/login_by_gmail"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>
 </LinearLayout>
</ScrollView>